Continue AutoService. Save progress